cấu hình foder Pug

--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,7 +1,4 @@
-doctype html
-html
-    head
-        title Danh Sach SP
+extends ../../layouts/default.pug
 
-    body
-        h1 Trang Danh Sách Sản Phẩm
+block main
+    h1 Trang Danh Sách SP
