--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,7 +1,3 @@
-doctype html
-html
-    head
-        title Trang Chủ
-
-    body
-        h1 Trang Chủ 
+extends ../../layouts/default.pug
+block main
+    h1 Trang chủ
